--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <title>Kate Dowd | Front End Developer</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Kate Dowd</h1>
+      <h2 class="mb-5">Front-end developer based in the United States</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
