--- a/index.html
+++ b/index.html
@@ -35,5 +35,49 @@
       <h2 class="mb-5">Front-end developer based in the United States</h2>
       <a href="#" class="btn btn-branding">Contact me</a>
     </div>
+    <p class="text-center m-5">Check out some of my work...</p>
+
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/rocko.png" class="img-fluid" alt="Rocko Fanclub" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">FAN-O-RAMA</h2>
+            <p class="mb-5 text-muted">
+              This is a project I created for SheCodes Basics. It's a fake
+              Rocko's Modern Life Fanclub. I decided to use this theme because
+              the first website I ever made as a 13-year-old was a Rocko's
+              Modern Life fan site.
+            </p>
+            <a href="#" class="btn btn-branding-outline">FAN-O-RAMA</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              This is my final project for SheCodes Plus. It's a functioning
+              weather application using an API and Bootstrap.
+            </p>
+            <a
+              href="https://pedantic-lamport-85e8be.netlify.app/"
+              class="btn btn-branding-outline"
+              >Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/weatherapp.png"
+            class="img-fluid"
+            alt="Weather App"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
