--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
       <h2 class="mb-5">Front-end developer based in the United States</h2>
       <a href="#" class="btn btn-branding">Contact me</a>
     </div>
+
     <p class="text-center m-5">Check out some of my work...</p>
 
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/rocko.png" class="img-fluid" alt="Rocko Fanclub" />
+          <img
+            src="images/rocko.png"
+            class="img-fluid rounded"
+            alt="Rocko Fanclub"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -49,12 +54,18 @@
               This is a project I created for SheCodes Basics. It's a fake
               Rocko's Modern Life Fanclub. I decided to use this theme because
               the first website I ever made as a 13-year-old was a Rocko's
-              Modern Life fan site.
+              Modern Life fan site. (The links work, but the newsletter signup
+              was just to practice JavaScript.)
             </p>
-            <a href="#" class="btn btn-branding-outline">FAN-O-RAMA</a>
+            <a
+              href="https://naughty-ptolemy-595d44.netlify.app/"
+              class="btn btn-branding-outline"
+              >Visit Site</a
+            >
           </div>
         </div>
       </div>
+      <hr />
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
@@ -66,7 +77,7 @@
             <a
               href="https://pedantic-lamport-85e8be.netlify.app/"
               class="btn btn-branding-outline"
-              >Weather App</a
+              >Launch App</a
             >
           </div>
         </div>
