About me button
Added a button to connect the About Me page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <h1>Kate Dowd</h1>
       <h2 class="mb-5">Front-end developer based in the United States</h2>
       <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="about.html" class="btn btn-branding-outline">About me</a>
     </div>
 
     <p class="text-center m-5">Check out some of my work...</p>
