--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <title>About | Kate Dowd</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-4">Hi, I am Kate Dowd</h1>
             <h2 class="mb-4">
               Front-end Developer based in the United States.
@@ -42,7 +42,7 @@
               For now I just want to have some placeholder text so I can make it
               look nice.
             </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
+            <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
