--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>👋 Hello, I am</p>
       <h1>Kate Dowd</h1>
       <h2 class="mb-5">Front-end developer based in the United States</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="contact.html" class="btn btn-branding">Contact me</a>
       <a href="about.html" class="btn btn-branding-outline">About me</a>
     </div>
 
