--- a/about.html
+++ b/about.html
@@ -29,6 +29,20 @@
     <title>About | Kate Dowd</title>
   </head>
   <body>
+<div class="container"></div>
+    <nav class="d-flex justify-content-between">
+      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
+      </a>  
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -42,7 +56,7 @@
               For now I just want to have some placeholder text so I can make it
               look nice.
             </p>
-            <a href="work.html" class="btn btn-branding">See my projects</a>
+            <a href="work.html" class="btn btn-branding mb-4">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
