--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
     <title>Kate Dowd | Front End Developer</title>
   </head>
   <body>
+    <div class="container"></div>
+    <nav class="d-flex justify-content-between">
+      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
+      </a>  
+      <ul>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Kate Dowd</h1>
