--- a/work.html
+++ b/work.html
@@ -29,9 +29,23 @@
     <title>Work | Kate Dowd</title>
   </head>
   <body>
+<div class="container"></div>
+    <nav class="d-flex justify-content-between">
+      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
+      </a>  
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li class="active"><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Take a look at what I've been working on!</h1>
+        <h1 class="mb-4">Recent projects</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
