--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,20 @@
     <title>About | Kate Dowd</title>
   </head>
   <body>
+<div class="container"></div>
+    <nav class="d-flex justify-content-between">
+      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
+      </a>  
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li class="active"><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
