--- a/index.html
+++ b/index.html
@@ -103,6 +103,34 @@
           />
         </div>
       </div>
+
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+          <a href="#" class="btn btn-branding mt-4">Contact me</a>
+        </div>
+        </div>
+        <div class="d-flex justify-content-center">
+        <a href="mailto:katewdowd@gmail.com"
+        class="email-link">katewdowd@gmail.com
+      </a>
+    </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/katypants">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-facebook"></i>
+        </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
