--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Kate Dowd is a front end developer based in the United States. See examples of her work and contact her for job inquiries.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,10 +36,10 @@
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About Kate">About</a></li>
+          <li><a href="/work.html" title="Kate's Work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Kate">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -107,7 +108,7 @@
       <footer>
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
           <div>
-          <h4>Work Inquiry</h4>
+          <h3>Work Inquiry</h3>
           <p class="text-muted">Let's work together</p>
           </div>
           <div>
@@ -116,17 +117,26 @@
         </div>
         <div class="d-flex justify-content-center">
         <a href="mailto:katewdowd@gmail.com"
-        class="email-link">katewdowd@gmail.com
+        class="email-link"
+        title="Email Kate"
+        >
+        katewdowd@gmail.com
       </a>
     </div>
         <div class="social-links d-flex justify-content-center mb-5">
-        <a href="#">
+        <a href="#"
+        target="_blank"
+        title="Kate on Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://github.com/katypants">
+        <a href="https://github.com/katypants"
+        target="_blank"
+        title="GitHub Profile">
           <i class="fab fa-github"></i>
         </a>
-        <a href="#">
+        <a href="#"
+        target="_blank"
+        title="Kate on Facebook">
           <i class="fab fa-facebook"></i>
         </a>
         </div>
