--- a/work.html
+++ b/work.html
@@ -35,10 +35,10 @@
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li class="active"><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About Kate">About</a></li>
+          <li class="active"><a href="/work.html" title="Kate's Work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Kate">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -94,6 +94,43 @@
           </div>
         </div>
       </div>
+ <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+          <a href="#" class="btn btn-branding mt-4">Contact me</a>
+        </div>
+        </div>
+        <div class="d-flex justify-content-center">
+        <a href="mailto:katewdowd@gmail.com"
+        class="email-link"
+        title="Email Kate"
+        >
+        katewdowd@gmail.com
+      </a>
+    </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+        <a href="#"
+        target="_blank"
+        title="Kate on Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/katypants"
+        target="_blank"
+        title="GitHub Profile">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="#"
+        target="_blank"
+        title="Kate on Facebook">
+          <i class="fab fa-facebook"></i>
+        </a>
+        </div>
+      </footer>
+
     </div>
   </body>
 </html>
