More SEO and minor fixes

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Kate Dowd is a front end developer
+     based in the United States. See examples of her work and contact her
+      for job inquiries.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +29,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>About | Kate Dowd</title>
+    <title>Contact | Kate Dowd</title>
   </head>
   <body>
 <div class="container"></div>
@@ -60,7 +63,7 @@
           <p class="text-muted">Let's work together</p>
           </div>
           <div>
-          <a href="#" class="btn btn-branding mt-4">Contact me</a>
+          <a href="/contact.html" class="btn btn-branding mt-4">Contact me</a>
         </div>
         </div>
         <div class="d-flex justify-content-center">
