Added content, final touches

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <body>
 <div class="container"></div>
     <nav class="d-flex justify-content-between">
-      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <a href="https://shecodes.io"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
@@ -55,9 +55,13 @@
               Front-end Developer based in the United States.
             </h2>
             <p class="mb-5">
-              Here's a paragraph all about me. I'm going to fill this in later.
-              For now I just want to have some placeholder text so I can make it
-              look nice.
+             Kate Dowd is an up and coming coder from Easthampton, Massachusetts, USA.
+             She had made a few websites for fun when she was a teenager and was 
+             reminded how much she enjoyed it when she saw an ad for SheCodes and
+             decided to give their classes a try. When she's not coding, Kate plays bass 
+             in her bands <a href="https://truejacqueline.bandcamp.com" class="band-links">The True Jacqueline</a>
+             and <a href="https://extemperband.bandcamp.com" class="band-links">Ex-Temper</a>
+             and hangs out with her cats Taco and Henri.
             </p>
             <a href="work.html" class="btn btn-branding mb-4">See my projects</a>
           </div>
@@ -69,7 +73,7 @@
             class="img-fluid rounded"
             id="bass-face"
           />
-          <small>Picture of me...</small>
+
         </div>
       </div>
  <footer>
@@ -82,7 +86,7 @@
           <a href="/contact.html" class="btn btn-branding mt-4">Contact me</a>
         </div>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5">
         <a href="mailto:katewdowd@gmail.com"
         class="email-link"
         title="Email Kate"
