--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <body>
 <div class="container"></div>
     <nav class="d-flex justify-content-between">
-      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <a href="https://shecodes.io"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
@@ -66,7 +66,7 @@
           <a href="/contact.html" class="btn btn-branding mt-4">Contact me</a>
         </div>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5">
         <a href="mailto:katewdowd@gmail.com"
         class="email-link"
         title="Email Kate"
