--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container"></div>
     <nav class="d-flex justify-content-between">
-      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <a href="https://shecodes.io"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
@@ -77,8 +77,7 @@
             <a
               href="https://naughty-ptolemy-595d44.netlify.app/"
               class="btn btn-branding-outline"
-              >Visit Site</a
-            >
+              >Visit Site</a>
           </div>
         </div>
       </div>
@@ -106,6 +105,33 @@
           />
         </div>
       </div>
+      <hr/>
+
+<div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/kateportfolio.jpeg"
+            class="img-fluid rounded"
+            alt="Kate's Portfolio"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Kate's Portfolio Project</h2>
+            <p class="mb-5 text-muted">
+              This is my final project for SheCodes Responsive. 
+              You're looking at it right now! Used HTML, CSS, Bootstrap, 
+              Font Awesome, Google Fonts, but most importantly, it's responsive! 
+              Go ahead, change the screen size and see what happens!
+            </p>
+            <a
+              href="https://tender-almeida-360a7f.netlify.app/"
+              class="btn btn-branding-outline"
+              >Visit Site</a>
+          </div>
+        </div>
+      </div>
+      <hr />
 
       <footer>
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
@@ -117,7 +143,7 @@
           <a href="/contact.html" class="btn btn-branding mt-4">Contact me</a>
         </div>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5">
         <a href="mailto:katewdowd@gmail.com"
         class="email-link"
         title="Email Kate"
