--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
   <body>
 <div class="container"></div>
     <nav class="d-flex justify-content-between">
-      <a href="/"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
+      <a href="https://shecodes.io"><img src="images/shecodeslogo.png" class="logo d-none d-md-block" alt="SheCodes Logo"/>
       <img src="images/shecodes-small-logo.jpeg" class="logo-small d-block d-md-none" alt="SheCodes Logo"/>
       </a>  
       <ul>
@@ -48,7 +48,11 @@
 
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Recent projects</h1>
+        <h1 class="mb-4">SheCodes Projects</h1>
+        <p>These are examples of SheCodes projects that I have worked on and 
+        will work on soon. I've made a basic landing page like the Yogurt website
+        and the more complicated Weather App. I'm assuming in SheCodes Pro I will 
+        be making the Translation App and the Dictionary App. Can't wait!</p>
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
@@ -107,7 +111,7 @@
           <a href="/contact.html" class="btn btn-branding mt-4">Contact me</a>
         </div>
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5">
         <a href="mailto:katewdowd@gmail.com"
         class="email-link"
         title="Email Kate"
