--- a/work.html
+++ b/work.html
@@ -136,6 +136,12 @@
           <i class="fab fa-facebook"></i>
         </a>
         </div>
+        <p class="text-center mt-5">👩‍💻 This website was coded by Kate Dowd and is 
+        <a href="https://github.com/katypants/kates-portfolio" 
+        target="_blank" 
+        class="code-link">
+        open-sourced</a>
+        </p>
       </footer>
 
     </div>
